<resources>
    <string name="app_name">WomenSecurityApp</string>
    <string name="google_map_api_key">AIzaSyC1uMbDWYK6aaFPdiT9Fp1KsHwMPNJ96d4</string>

    <string name="enter_address_city_or_zipcode">Enter Address, City or ZipCode</string>
    <string name="personal_information">personal Information</string>
    <string name="my_name">my_name</string>
    <string name="room_no_boys_hostelbekar_college_gwalior">room no.--- boys hostelbekar college gwalior</string>
    <string name="alert">Alert</string>
    <string name="contact_no">Contact no. *</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="map">Map</string>
    <string name="police_station">Police Station</string>
    <string name="railway_station">Railway Station</string>
    <string name="airport">Airport</string>
    <string name="mall">Mall</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="trusted_person">Trusted Person</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_app">Share App</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="police">Police</string>
    <string name="railway">Railway</string>
    <string name="shopping">Shopping</string>
    <string name="safe">Safe</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="email_optional">Email (optional)</string>
    <string name="address_optional">Address (optional)</string>
    <string name="relation_optional">Relation (optional)</string>
    <string name="add_person">ADD person</string>
    <string name="person_successfully_added">Person Successfully Added</string>
    <string name="add_more">Add More</string>
    <string name="proceed">Proceed</string>
    <string name="user_id">user id</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="default_web_client_id">123</string>
</resources>