<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.project.womensecurityapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.project.womensecurityapp.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.project.womensecurityapp.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_trusted"
        android:name="com.project.womensecurityapp.ui.trusted.TrustedFragment"
        android:label="@string/trusted_person"
        tools:layout="@layout/fragment_trusted" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.project.womensecurityapp.ui.contact.ContactFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.project.womensecurityapp.ui.share.ShareFragment"
        android:label="@string/share_app"
        tools:layout="@layout/fragment_share" />
</navigation>