<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/person_successfully_added"
        android:textAlignment="center"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/more"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/add_more"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:backgroundTint="@color/pink" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/proceed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/proceed"
            android:textStyle="bold"
            app:backgroundTint="@color/pink" />

    </LinearLayout>

</LinearLayout>