<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".User_login_info.Signup"
    android:background="@color/lightGreen">




        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/security"
            android:id="@+id/logo"
            android:background="@color/white"
            android:paddingVertical="50dp"
            />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hola!"
            android:layout_marginStart="10dp"
            android:textSize="40sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold|italic"
            android:id="@+id/hola"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please login to continue"
            android:layout_below="@+id/hola"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold|italic"/>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:hint="@string/user_id"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:hint="@string/password"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimary"
        android:paddingHorizontal="70dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:spinning_bar_color="@color/white" />


    <!--<com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textStyle="bold"
        android:id="@+id/log_in"
        android:backgroundTint="@color/quantum_pink"
        android:textColor="@color/quantum_white_100"
        />-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-or-"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginVertical="7dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        />


    <!--Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_page"
        android:text="next page">

    </Button-->

    <me.ibrahimsn.lib.CirclesLoadingView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:animDelay="150"
        app:animDistance="10dp"
        app:animDuration="500"
        app:animInterpolator="accelerateDecelerate"
        app:circleMargin="8dp"
        app:circleRadius="5dp" />


</LinearLayout>